module(
    name = "lumbrbuff",
    version = "0.1",
)

bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")
bazel_dep(name = "cpp-httplib", version = "0.22.0")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "gtest")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_by_platform = {
        "//:requirements_linux.txt": "linux_*",
        "//:requirements_darwin.txt": "osx_*",
        "//:requirements_windows.txt": "windows_*",
    },
)
use_repo(pip, "pip")
