load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "app",
    srcs = ["app.py"],
    data = ["templates/index.html"],
    deps = [
        "@pip//flask",
        "@pip//flask_sqlalchemy",
        "@pip//flask_socketio",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "mock_client",
    srcs = ["mock_client.cc"],
    deps = [
        "@com_google_absl//absl/log:initialize",
        "//lumbrsink",
    ],
)
