load("@rules_python//python:defs.bzl", "py_binary")
load("//build_defs:gunicorn.bzl", "gunicorn_binary")

gunicorn_binary(
    name = "appserver",
    srcs = ["appserver.py"],
    main = "appserver.py",
    data = ["templates/index.html"],
    args = ["lumbrpile.appserver:app"],
    deps = [
        "@pip//flask",
        "@pip//flask_sqlalchemy",
        "@pip//flask_socketio",
        "@pip//gevent",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "mock_client",
    srcs = ["mock_client.cc"],
    deps = [
        "@com_google_absl//absl/log:initialize",
        "//lumbrsink",
    ],
)
